fix to builds bleeding out of box
width was set to a percentage, meaning it would resize with screen. led to visual issues depending on screen size.

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -378,7 +378,7 @@ nav:nth-child(1) {
 
 /* Container holding all our builds in the viewer */
 #builds {
-  width: 65%;
+  width: 978px;
   min-width: 400px;
   border: 2px solid #55acee;
   border-radius: 4px;
@@ -400,7 +400,7 @@ nav:nth-child(1) {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  width: 97%;
+  width: 961px;
   min-height: 120px;
   padding: 15px;
   margin: 2px auto;
